updated page titles, finishing  up nav fuction!

--- a/cutgroup.html
+++ b/cutgroup.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Liz Brown UX Researcher and Consultant | CUTGroup CaseStudy</title>
+    <title>CUTGroup</title>
     <link rel="images" href="images">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
