index layout fixes

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
               UX Researcher and Human-Centered Designer at <a class="hero-a-tag" href="https://getshogun.com/frontend" target="_blank">Shogun</a>. Education Director at <a class="hero-a-tag" href="https://qtbipoc.design/" target="_blank">QTBIPOC Design</a>. Background in consulting and experimental psychology.
             </p>
           </div>
-        
         <!-- HERO END -->
+        <div class="w-100"></div>
         <!-- ABOUT -->
           <div class="col-5 about-container">
             <!-- Header -->
