--- a/index.html
+++ b/index.html
@@ -28,15 +28,13 @@
       <div class="container-fulid main-container">
         <!-- NAV -->
         <div id="nav">
-           <!-- nav fuction below -->
+           <!-- nav fuction inserted below -->
 
         </div>
-        <!-- resuse nav end -->
+        <!-- NAV END -->
         <!-- HERO -->
         <div class="row mt-5 pl-3 pr-3 offset-2">
           <div class="col-5 about-container">
-            <h1>Liz Brown</h1>
-            
             <!-- hero image -->
             <img class="about-img"src="images\edited-profile-pic.png" alt="">
             <p class="hero-p mt-4 mb-4">
