lots of col and row layout updates

--- a/shogun.html
+++ b/shogun.html
@@ -44,45 +44,39 @@
 
         </div>
         <!-- resuse nav end -->
-        <div class="container mono-hero-container offset-2">
-          <div class="row mt-5 pt-5  ">
-            <div class="col-10 ">
-              <h1 class="mono-h1">Shogun</h1>
-              <h2 class="mono-h2">User testing</h2>
-            </div>
-          </div>
-          <div class="row mt-5 pt-5">
-            <div class="col-10">
+        <div class="container mono-hero-container ">
+          <div class="row mt-5 pt-5 offset-3">
+            <div class="col-5">
               <h3>Research Topic</h3>
               <p>Varies</p>
             </div>
             <div class="w-100">
             </div>
-            <div class="col-10">
+            <div class="col-5">
               <h3>People</h3>
               <p></p>
             </div>
             <div class="w-100">
             </div>
-            <div class="col-10">
+            <div class="col-5">
               <h3>Research Question</h3>
               <p></p>
             </div>
             <div class="w-100">
             </div>
-            <div class="col-10">
+            <div class="col-5">
               <h3>Problem Statement</h3>
               <p></p>
             </div>
             <div class="w-100">
             </div>
-            <div class="col-10">
+            <div class="col-5">
               <h3>Research Outcome</h3>
               <p></p>
             </div>
             <div class="w-100">
             </div>
-            <div class="col-10">
+            <div class="col-5">
               <h3>Research Process</h3>
               <p></p>
             </div>
