--- a/resume.html
+++ b/resume.html
@@ -45,10 +45,8 @@
         </div>
         <!-- NAV END -->
         <!-- RESUME -->
-        <div class="row mt-4 pl-3 pr-3 offset-2">
-          <div class="col-11 mb-3">
-            <h1>Resume</h1>
-          </div>
+        <div class="row mt-4 pl-3 pr-3 offset-3">
+
           <div class="col-2">
             <h2>Experience</h2>
           </div>
@@ -58,7 +56,7 @@
           <div class="col-2">
             <p>2020 - Present</p>
           </div>
-          <div class="col 8">
+          <div class="col-3">
             <h3>UX Researcher at Shogun</h3>
             <p>Creating ecommerce software to power the world's fastest websites.</p>
           </div>
@@ -68,7 +66,7 @@
           <div class="col-2">
             <p>2019 - 2020</p>
           </div>
-          <div class="col 8">
+          <div class="col-3">
             <h3>UX Researcher & Consultant</h3>
             <p>Established the first human-centered consulting service at the University of Michigan.</p>
           </div>
@@ -78,7 +76,7 @@
           <div class="col-2">
             <p>2019</p>
           </div>
-          <div class="col 8">
+          <div class="col-3">
             <h3>UX Research Intern</h3>
             <p>Conducted user research for a product team that developed enterprise SaaS for creative professionals</p>
           </div>
@@ -88,7 +86,7 @@
           <div class="col-2">
             <p>2019 - 2020</p>
           </div>
-          <div class="col 8">
+          <div class="col-3">
             <h3>UX Research Lead</h3>
             <p>Co-Designed and implemented a usability testing program with government and civic organizations</p>
           </div>
@@ -98,7 +96,7 @@
           <div class="col-2">
             <p>Back in the Day</p>
           </div>
-          <div class="col 8">
+          <div class="col-3">
             <h3>People Nerd</h3>
             <p>Experimental psychological researcher studying behavior change in adolescents</p>
           </div>
@@ -114,7 +112,7 @@
         <div class="col-2">
           <p>University of Michigan</p>
         </div>
-        <div class="col 8">
+        <div class="col-3">
           <p>MS - Human-Computer Interaction & User Experience Research</p>
         </div>
         <div class="w-100">
@@ -124,32 +122,35 @@
         <div class="col-2">
           <p>University of Pittsburgh</p>
         </div>
-        <div class="col 8">
+        <div class="col-3">
           <p>BS - Psychology and Africana Studies</p>
         </div>
         <div class="w-100">
         </div>
         <!-- PITT END -->
-        
         <!-- EDUCATION END -->
+
         <!-- DOWNLOAD RESUME -->
         <div class="w-100"></div>
-          <div class="col-8">
+          <div class="col-3">
           <div class=""tabindex="0">
             <a class="btn btn-primary" href="files\resume.PDF" role="button" target="_blank" >Download Resume</a>
           </div>
           </div>
         <!-- RESUME END -->
+
         <!-- CONTAINER END -->
       </div>
     </div>
     </main>
-    <!-- END OF MAIN -->
+    <!-- MAIN END -->
+
     <!-- FOOTER -->
     <div id="footer">
 
     </div>
-    <!-- END OF FOOTER -->
+    <!-- FOOTER END -->
+    
     <!-- SCRIPT -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
