--- a/work.html
+++ b/work.html
@@ -37,16 +37,17 @@
   <body>
     <!-- MAIN -->
     <main>
+
       <!--CONTAINER -->
       <div class="container-fulid main-container">
         <!-- NAV -->
         <div id="nav">
-
+        <!-- nav fuction inserted below -->
         </div>
         <!-- NAV END -->
 
         <!-- WORK START -->
-        <div class="row mt-5 pl-3 pr-3 offset-1" id="work">
+        <div class="row mt-5 pl-3 pr-3 offset-3" id="work">
           <div class="col-3 mb-3">
             <h2>Work</h2>
           </div>
@@ -91,15 +92,19 @@
           </div>
         </div>
         <!-- WORK END -->
-        <!-- CONTAINER END -->
+
       </div>
+      <!-- CONTAINER END -->
+    
     </main>
-    <!-- END OF MAIN -->
+    <!-- MAIN END -->
+
     <!-- FOOTER -->
     <div id="footer">
     <!-- cc-footer.html inserted below -->
     </div>
-    <!-- END OF FOOTER -->
+    <!-- FOOTER END -->
+
     <!-- SCRIPT -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
