removed margin classes from rows

--- a/cutgroup.html
+++ b/cutgroup.html
@@ -44,8 +44,8 @@
 
         </div>
         <!-- resuse nav end -->
-        <div class="container mono-hero-container ">
-          <div class="row mt-5 pt-5 offset-3">
+        <div class=" mono-hero-container ">
+          <div class="row offset-3">
             <div class="col-5">
               <h3>Research Topic</h3>
               <p>Varies</p>
