--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <!-- NAV END -->
         <!-- HERO -->
-        <div class="row mt-5 pl-3 pr-3 offset-3">
+        <div class="row offset-3">
           
           <div class="col-5 about-container">
             <!-- hero image -->
