--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
         </div>
         <!-- NAV END -->
         <!-- RESUME -->
-        <div class="row mt-4 pl-3 pr-3 offset-3">
+        <div class="row offset-3">
 
           <div class="col-2">
             <h2>Experience</h2>
