--- a/work.html
+++ b/work.html
@@ -47,12 +47,7 @@
         <!-- NAV END -->
 
         <!-- WORK START -->
-        <div class="row mt-5 pl-3 pr-3 offset-3" id="work">
-          <div class="col-3 mb-3">
-            <h2>Work</h2>
-          </div>
-          <div class="w-100"></div>
-
+        <div class="row offset-3" id="work">
           <!-- Shogun column -->
           <div class="col-3 mt-5">
             <!-- shogun card -->
