small code layout tweaks, padding on footer

--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
       <div class="container-fulid main-container">
         <!-- NAV -->
         <div id="nav">
-          <!-- cc-nav.html inserted here -->
+          <!-- cc-nav.html inserted below -->
         </div>
         <!-- NAV END -->
         <!-- RESUME -->
