--- a/shogun.html
+++ b/shogun.html
@@ -37,13 +37,16 @@
   <body>
     <!-- MAIN -->
     <main>
+
       <!--CONTAINER -->
       <div class="container-fulid">
+
         <!-- NAV -->
         <div id="nav">
+          <!-- cc-nav.html inserted below -->
 
         </div>
-        <!-- resuse nav end -->
+        <!-- NAV END -->
         <div class=" mono-hero-container ">
           <div class="row offset-3">
             <div class="col-5">
