--- a/work.html
+++ b/work.html
@@ -41,9 +41,10 @@
 
       <!--CONTAINER -->
       <div class="container-fulid main-container">
+        
         <!-- NAV -->
         <div id="nav">
-        <!-- nav fuction inserted below -->
+        <!-- cc-nav.html inserted below -->
         </div>
         <!-- NAV END -->
 
