--- a/cutgroup.html
+++ b/cutgroup.html
@@ -41,9 +41,10 @@
       <div class="container-fulid">
         <!-- NAV -->
         <div id="nav">
+          <!-- cc-nav.html inserted below -->
 
         </div>
-        <!-- resuse nav end -->
+        <!-- NAV END -->
         <div class=" mono-hero-container ">
           <div class="row offset-3">
             <div class="col-5">
