--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
   <body>
     <!-- MAIN -->
     <main>
+
       <!--CONTAINER -->
       <div class="container-fulid main-container">
+
         <!-- NAV -->
         <div id="nav">
-           <!-- nav fuction inserted below -->
+           <!-- cc-nav.html inserted below -->
         </div>
         <!-- NAV END -->
+
         <!-- HERO -->
         <div class="row offset-3">
           
@@ -42,42 +45,46 @@
             </p>
           </div>
         <!-- HERO END -->
+
         <div class="w-100"></div>
+
         <!-- ABOUT -->
           <div class="col-5 about-container">
             <!-- Header -->
             <h2>Be Thinking</h2>
             <!-- content -->
             <p class="about-p mt-4 mb-4">
-              
               Here, on our four billion year-old planet I enjoy my job, because it allows me to research and design systems for two of the most complex beings on earth--computers and humans.  
-  
               <br><br>
-
               When I'm not resarching human-computer interactions, you can find me practicing spanish, playing strategy games, advocating for the term 'enslaved people' over the term 'slaves,' reading wiki articles, working with QTBIPOC designers, chilling with my cat, writing one screenplay over and over again, listening to Little Dragon, or playing tennis.
               <br><br>
-
               Reach out at <a class="hero-a-tag" href="mailto:liz.alma.brown@gmail.com?subject=*Waving emoji hand* Hi Liz!" target="_self" data-content="liz.alma.brown@gmail.com" data-type="mail" target="_blank">liz.alma.brown@gmail.com</a>.
             </p>
           </div>
       </div>
         <!-- ABOUT END -->
-        <!-- CONTAINER END -->
+
       </div>
+      <!-- CONTAINER END -->
+
     </main>
     <!-- END OF MAIN -->
+
     <!-- FOOTER -->
     <div id="footer">
+      <!-- cc-footer.html inserted below -->
 
     </div>
-    <!-- END OF FOOTER -->
-    <!-- SCRIPT -->
+    <!-- FOOTER END -->
+
+    <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-    <!-- script functions -->
+
+    <!-- FUNCTIONS -->
     <script>
       $(function()
       {
@@ -90,8 +97,8 @@
           $('#footer').load('cc-footer.html');
       });
     </script>
+    <!-- FUNCTIONS END -->
 
-    <!-- end of scripts -->
-    <!-- SCRIPT END -->
+    <!-- SCRIPTS END -->
   </body>
 </html>
